--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,5 +94,5 @@
 }
 
 .hero-bg {
-  background-image: url('https://images.unsplash.com/photo-1548213235-4c48c0862296?q=80&w=1887&auto=format&fit=crop');
+  background-image: url('/hero-background.png');
 }
